<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Petal</string>
    <string name="start">Click to Start! </string>
    <string name="teacherMode">Login as Teacher</string>
    <string name="tooclose">Stop! You\'re too close!</string>
    <string name="intro">Hold your tablet about 40cm in front of you.</string>
     <string name="startMain">Start</string>
    <string name="instructions">Instructions</string>
    <string name="about">About</string>
    <string name="about_description">"As tablets become more widespread in today's world, we decided to explore the usage of tablets as an educational resource for children. Since tablets possess both cameras and features that enable users to watch videos, we looked into the possibility of simultaneously using both features to tailor the video watching to the user. This app is the product of our research. PetalPlayer was created to provide a more tailored experience of e-learning, especially to users ages 7-10. As the user watches one of the educational videos provided, the camera streams data at the same time and uses face detection to determine when the user is losing focus and then acts accordingly to snap the user back to attention.
        \nThis app was created by Kelly Liu, Victoria Tam, and Phoebe Tse. Special thanks to Dr. Edmund Lam and Dr. Vincent Tam for guiding us along the way and providing us with useful feedback
        \nAugust 2013"</string>
    <string name="close">Close</string>
    <string name="popup_name">Popup</string>
    <string name="instructions_description">"Welcome to the PetalPlayer, the key to your future educational success! Never again shall you miss information or lose focus during ANY video lecture! If you're falling asleep, distracted, or just spacing out, this app will catch them all! It will loudly blare an alert, and then you'll be up and ready to keep watching!
        \nNow what are you waiting for? Just press Start and begin!
        \nPetalPlayer: making your learning blossom one video at a time:D
        \n*Note: this app can play almost any video on your tablet. Thus, if there is a specific video that you wish to view, first download it onto your tablet and then you can access it through PetalPlayer."</string>
	<string name="closer">You\'re too close!
        \nPlease move back!</string>
    <string name="str_next">Next</string>
    <string name="title_activity_teacher_login">TeacherLoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teacher_signup">TeacherSignup</string>

    <string-array name="userTypeValues">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
    <string name="title_activity_student_login">StudentLoginActivity</string>
    <string name="title_activity_student_signup">StudentSignup</string>
</resources>