<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainscreen"
    android:visibility="visible"
    android:orientation="horizontal" > 
  
  <!--   <TextView 
        android:id="@+id/font" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
         /> -->
  
    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="169dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/about"
        android:textSize="40sp" /> 
  
    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="58dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/instructions"
        android:textSize="40sp" /> 
  
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/instructionsButton"
        android:layout_marginTop="82dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/startMain"
        android:textSize="40sp" />

    <Button
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="125dp"
        android:layout_marginLeft="58dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/teacherMode"
        android:textSize="40sp" />
      
</RelativeLayout> 