<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent"
    android:orientation="horizontal" > 
  
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" > 
  
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" > 
  
            <TextView
                android:id="@+id/abouttitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="40sp" /> 
  
            <TextView
                android:id="@+id/aboutdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_description"
                android:textColor="@color/black"
                android:textSize="20sp" /> 
  
            <Button
                android:id="@+id/close_about_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="closeOnClick"
                android:text="@string/close"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@null" /> 
        </LinearLayout> 
    </ScrollView> 
  
</RelativeLayout> 